Closed Bug 544178 Opened 14 years ago Closed 14 years ago

[Nanojit] Assembler code for LIR_ult is wrong on sparc.

Categories

(Core Graveyard :: Nanojit, defect)

Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey)

Attachments

(1 file)

Currently the Assembler code for LIR_ult is wrong on sparc is MOVEI. Apparently it is not correct. Should use MOVCSI.
This bug cause the new flash player not working correctly on youtube.
Assignee: nobody → leon.sha
Status: NEW → ASSIGNED
Attachment #425151 - Flags: review?(stejohns)
Attachment #425151 - Flags: review?(stejohns) → review+
leon, do you need me to push this for you?
(In reply to comment #2)
> leon, do you need me to push this for you?
No, thanks a lot. I can do it by myself.
http://hg.mozilla.org/projects/nanojit-central/rev/955a870d35fa
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
http://hg.mozilla.org/tracemonkey/rev/e065b7b09240
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/e065b7b09240
Status: REOPENED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: