Bug 544178 -  [Nanojit] Assembler code for LIR_ult is wrong on sparc. r=stejohns